# formula_validation

./: Adduct.py  Element.py  Formula.py  FormulaPrediction.py  NotFoundElement.py  README.md  adducts.txt  formula_utils.py  pyproject.toml  test_adduct.py  test_formula.py  test_mf_prediction.R
formula_validation/: Adduct.py  Element.py  Formula.py  IncorrectAdduct.py  IncorrectFormula.py
scripts/: adducts_maricruz.txt  script_maricruz.py  tabla_formulas.csv  tabla_formulas.xlsx  tabla_formulas_corrected.csv
tests/: test_adduct.py  test_formula.py  test_mf_prediction.R
